Update README to English, remove personal data and Cloudflare specifics
- Translate README to English
- Remove 'Live' demo link
- Remove personal domain and usernames
- Replace Cloudflare Tunnel with generic deployment methods
- Add security notes
- Add general deployment examples as reference

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Domena do generowania linków
-# Domyślnie: http://localhost:8014
-# Na produkcji wpisz: https://walentynki.example.com
-DOMAIN=https://walentynki.techparka.pl
+# Domain for generating card links
+# Default: http://localhost:8014
+# Production example: https://your-domain.com
+DOMAIN=http://localhost:8014
 
-# Ścieżka do bazy SQLite
+# Path to SQLite database
 DB_PATH=/data/valentines.db
